--- a/test/DataStructuresTest.dproj
+++ b/test/DataStructuresTest.dproj
@@ -83,7 +83,8 @@
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
         <DCCReference Include="..\source\uArray.pas"/>
-        <DCCReference Include="uArrayListTest.pas"/>
+        <DCCReference Include="uArrayTest.pas"/>
+        <DCCReference Include="..\source\uDataStructures.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
@@ -125,7 +126,7 @@
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
-                <DeployFile LocalName="Win32\Debug\DataStructuresTest.exe" Configuration="Debug" Class="ProjectOutput">
+                <DeployFile LocalName="bin\DataStructuresTest.exe" Configuration="Debug" Class="ProjectOutput">
                     <Platform Name="Win32">
                         <RemoteName>DataStructuresTest.exe</RemoteName>
                         <Overwrite>true</Overwrite>
