--- a/test/DataStructuresTest.dproj
+++ b/test/DataStructuresTest.dproj
@@ -88,6 +88,9 @@
         <DCCReference Include="..\source\uArray.pas"/>
         <DCCReference Include="..\source\uMutableArray.pas"/>
         <DCCReference Include="uMutableArrayTest.pas"/>
+        <DCCReference Include="uSinglyLinkedListTest.pas"/>
+        <DCCReference Include="..\source\uList.pas"/>
+        <DCCReference Include="..\source\uSinglyLinkedList.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
